Reworking nutrition label markup to prevent jumping around when border is added to indicate selection
Task #216885

--- a/app/assets/stylesheets/modules/nutrition_labels.scss
+++ b/app/assets/stylesheets/modules/nutrition_labels.scss
@@ -7,11 +7,21 @@
   box-sizing: content-box;
   line-height: normal;
 
+  div {
+    border: 1px solid transparent;
+  }
+
+  .divider {
+    background-color: black;
+  }
+
   .nutrition-facts-title {
     font-size: 22px;
-    border-bottom: 1px solid black;
     font-weight: 600;
     text-align: center;
+  }
+  .nutrition-facts-title-divider {
+    height: 1px;
   }
 
   .nutrition-facts-servings {
@@ -22,7 +32,6 @@
   .nutrition-facts-serving-size {
     font-size: 12px;
     width: 100%;
-    border-bottom: 7px solid black;
     font-weight: bold;
 
     .serving-size-label {
@@ -35,6 +44,10 @@
     }
   }
 
+  .nutrition-serving-size-divider {
+    height: 7px;
+  }
+
   .nutrition-facts-amount {
     margin-top: 3px;
     font-size: 8px;
@@ -43,7 +56,6 @@
 
   .nutrition-facts-calories {
     font-size: 22px;
-    border-bottom: 3px solid black;
     font-weight: bold;
 
     .calories-label {
@@ -54,6 +66,10 @@
       display: inline-block;
       float: right;
     }
+  }
+
+  .nutrition-calories-divider {
+    height: 3px;
   }
 
   .nutrition-facts-percent {
@@ -79,8 +95,11 @@
     }
   }
 
+  .nutrition-facts-vitamins-top-divider {
+    height: 7px;
+  }
+
   .nutrition-facts-vitamins {
-    border-top: 7px solid black;
     font-size: 10px;
     padding: 2px 0;
   }
@@ -101,9 +120,12 @@
     }
   }
 
+  .nutrition-facts-vitamins-bottom-divider {
+    height: 3px;
+  }
+
   .nutrition-facts-daily-value {
     font-size: 8px;
-    border-top: 3px solid black;
   }
 
   .fat, .cholesterol, .sodium, .carbs, .protein {
